Adicion de informacion en paginas, team y about us

--- a/about.html
+++ b/about.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+   <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre EaBuenCamino</title>
+    <link rel="icon" href="images/faviconea.png" type="image/x-icon" />
+
+    <title>EABuenCamino - Terapia y Bienestar</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&display=swap;700&family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Custom CSS (opcional) -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-[#F8F4E3] text-[#336699]">
     <!-- Header -->
@@ -356,7 +374,7 @@
             Tu voz en tu idioma
           </h2>
           <p class="text-lg max-w-2xl fade-on-scroll">
-            Como <strong>terapeutas bilingües y biculturales</strong>, le
+            Como <strong class="text-[#336699]">terapeutas bilingües y biculturales</strong>, le
             ofrecemos la posibilidad de expresarse en el idioma que le haga
             sentir más cómodo — ya sea en inglés, en español o en ambos — porque
             creemos que
@@ -374,14 +392,14 @@
           <div class="mb-4 fade-on-scroll">
             <div class="w-12 h-12 bg-white rounded-full mx-auto"></div>
           </div>
-          <h2 class="text-2xl font-semibold mb-4 fade-on-scroll">
+          <h2 class="text-2xl font-semibold mb-4 fade-on-scroll text-[#E3BE03]">
             Un enfoque sensible y justo
           </h2>
           <p class="text-lg max-w-2xl fade-on-scroll">
             Nuestro enfoque terapéutico está profundamente arraigado en la
-            <strong>comprensión del trauma</strong>, la
-            <strong>equidad</strong> y la
-            <strong>sensibilidad cultural</strong>. Reconocemos cómo las
+            <strong class="text-[#E3BE03]">comprensión del trauma</strong>, la
+            <strong class="text-[#E3BE03]">equidad</strong> y la
+            <strong class="text-[#E3BE03]">sensibilidad cultural</strong>. Reconocemos cómo las
             experiencias de vida pueden moldear la forma en que nos vemos a
             nosotros mismos, y queremos <strong>acompañarle</strong> en el
             proceso de identificar y transformar aquellas narrativas que ya no
