--- a/services.html
+++ b/services.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre EaBuenCamino</title>
+    <link rel="icon" href="images/faviconea.png" type="image/x-icon" />
+
+    <title>EABuenCamino - Terapia y Bienestar</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&display=swap;700&family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Custom CSS (opcional) -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-[#F8F4E3] text-[#336699]">
     <!-- Header -->
