--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -100,11 +102,11 @@
               class="relative flex flex-col items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
               Sobre Nosotros
-              <div class="mt-3">
+              <div class="mt-3 overflow-visible">
                 <svg
                   width="25"
                   height="25"
-                  viewBox="-5 -5 42 39"
+                  viewBox="-10 -10 60 60"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <g class="heart-group">
