--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
     <!-- Custom CSS (opcional) -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="bg-[#F8F4E3] text-[#336699]">
+  <body class="bg-[#336699] text-[#336699]">
     <!-- Header -->
     <header class="sticky top-0 z-50 bg-[#336699] px-6 py-4">
       <div class="max-w-6xl mx-auto flex justify-between items-center relative">
@@ -312,8 +312,8 @@
     </header>
 
     <!-- Contenedor principal -->
-    <main class="w-full  mx-auto px-5 py-12">
-      <section class="bg-gray-100 py-12 px-4 md:px-16">
+    <main class=" w-full mx-auto px-5 py-12 bg-[#336699] md:w-4/5 ">
+      <section class="bg-[#F8F4E3] py-12 px-4 md:px-16 ">
         <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">
           Conoce a Nuestro Equipo
         </h2>
@@ -326,9 +326,9 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/diana-hernandez.jpg"
+              src="/images/jpg/diana-hernandez.jpg"
               alt="Diana Hernández"
-              class="w-40 h-40 rounded-full object-cover shadow-md"
+              class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
             <div class="w-full">
               <h3 class="text-2xl font-semibold">Diana Hernández, LPCC</h3>
@@ -340,38 +340,175 @@
                 salud mental. Está especializada en trauma, depresión y terapia
                 familiar.
               </p>
-              <div
-                id="diana-content"
-                class="overflow-hidden transition-all max-h-0 duration-700 ease-in-out"
-              >
-                <p class="mt-3 text-gray-700">
-                  Ha trabajado en comunidades vulnerables y aplica enfoques como
-                  la teoría polivagal, EMDR y Sandtray Therapy. Su mirada se
-                  basa en la compasión, autenticidad y la autorreflexión.
-                </p>
-                <p class="mt-3 text-gray-700 font-medium italic">
-                  Su objetivo es ayudarte a ver tu proceso como un camino
-                  compartido de sanación y autocompasión.
-                </p>
-              </div>
-              <button
-                onclick="toggleContent('diana-content', this)"
-                class="mt-4 text-blue-600 font-medium hover:underline"
+
+              <a
+                href="diana.html"
+                class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
               >
                 Leer más
-              </button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="#336699"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                  />
+                </svg>
+              </a>
             </div>
           </div>
-          <!-- Tarjeta 4: Fidel -->
+
+          <!-- Tarjeta 2: Jorge B -->
+          <div
+            class="flex flex-col md:flex-row-reverse items-center md:justify-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 "
+            data-aos="fade-up"
+            data-aos-delay="0"
+          >
+            <img
+              src="/images/jpg/jorge-b.jpg"
+              alt="Jorge B"
+              class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md "
+            />
+            <div class="w-full ">
+              <h3 class="text-2xl font-semibold">Jorge Brozicevich, LPCC</h3>
+              <p class="text-indigo-600 font-medium">
+                Consejera Clínica Bilingüe
+              </p>
+              <p class="mt-3 text-gray-700">
+                Jorge combina su experiencia bicultural con más de 12 años en
+                salud mental. Está especializada en trauma, depresión y terapia
+                familiar.
+              </p>
+
+              <a
+                href="jorge.html"
+                class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
+              >
+                Leer más
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="#336699"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <!-- Tarjeta 3: Teraspista 2 -->
+          <div
+            class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
+            data-aos="fade-up"
+            data-aos-delay="0"
+          >
+            <img
+              src="/images/jpg/lady2.jpg"
+              alt="Therapist"
+              class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
+            />
+            <div class="w-full">
+              <h3 class="text-2xl font-semibold">Therapist, LPCC</h3>
+              <p class="text-indigo-600 font-medium">
+                Consejera Clínica Bilingüe
+              </p>
+              <p class="mt-3 text-gray-700">
+                Diana combina su experiencia bicultural con más de 12 años en
+                salud mental. Está especializada en trauma, depresión y terapia
+                familiar.
+              </p>
+
+              <a
+                href="terapista.html"
+                class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
+              >
+                Leer más
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="#336699"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <!-- Tarjeta 4: Admin 1 -->
           <div
             class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
             data-aos="fade-up"
-            data-aos-delay="300"
+            data-aos-delay="0"
           >
             <img
-              src="/images/fidel-ramirez.jpg"
-              alt="Fidel Ramírez Ortiz"
-              class="w-40 h-40 rounded-full object-cover shadow-md"
+              src="/images/jpg/admin1.jpg"
+              alt="admin"
+              class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
+            />
+            <div class="w-full">
+              <h3 class="text-2xl font-semibold">Admin 1, LPCC</h3>
+              <p class="text-indigo-600 font-medium">
+                Consejera Clínica Bilingüe
+              </p>
+              <p class="mt-3 text-gray-700">
+                Diana combina su experiencia bicultural con más de 12 años en
+                salud mental. Está especializada en trauma, depresión y terapia
+                familiar.
+              </p>
+
+              <a
+                href="admin.html"
+                class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
+              >
+                Leer más
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="#336699"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <!-- Tarjeta 5: Fidel -->
+          <div
+            class="flex flex-col md:flex-row items-center md:items-center mx-auto gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
+            data-aos="fade-up"
+            data-aos-delay="0"
+          >
+            <img
+              src="/images/jpg/fidel-ramirez.jpg"
+              alt="fidel"
+              class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
             <div class="w-full">
               <h3 class="text-2xl font-semibold">Fidel Ramírez Ortiz</h3>
@@ -383,115 +520,37 @@
                 espiritual, acompañando con compasión a personas en los márgenes
                 sociales.
               </p>
-              <div
-                id="fidel-content"
-                class="overflow-hidden transition-all max-h-0 duration-700 ease-in-out"
-              >
-                <p class="mt-3 text-gray-700">
-                  Usa herramientas como CBT, Terapia Centrada en la Persona,
-                  integración cuerpo/mente y espiritualidad, creando espacios de
-                  sanación profunda.
-                </p>
-                <p class="mt-3 text-gray-700">
-                  Con una historia personal de resiliencia, acompaña con
-                  presencia honesta, sin recetas, solo caminos hacia uno mismo.
-                </p>
-                <p class="mt-3 text-gray-700 font-medium italic">
-                  Cada historia es sagrada. Cada regreso a la integridad es un
-                  retorno al hogar.
-                </p>
-              </div>
-              <button
-                onclick="toggleContent('fidel-content', this)"
-                class="mt-4 text-blue-600 font-medium hover:underline"
+
+              <a
+                href="fidel.html"
+                class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
               >
                 Leer más
-              </button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="#336699"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                  />
+                </svg>
+              </a>
             </div>
           </div>
-
-          <!-- Tarjeta 2: Carlos -->
-          <div
-            class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
-            data-aos="fade-up"
-            data-aos-delay="100"
-          >
-            <img
-              src="/images/terapista2.jpg"
-              alt="Jorge B"
-              class="w-40 h-40 rounded-full object-cover shadow-md"
-            />
-            <div class="w-full">
-              <h3 class="text-2xl font-semibold">Jorge B, LCSW</h3>
-              <p class="text-indigo-600 font-medium">
-                Especialista en Ansiedad y Conducta
-              </p>
-              <p class="mt-3 text-gray-700">
-                Con más de 10 años de experiencia, Jorge apoya a adolescentes y
-                adultos en el manejo de ansiedad y autoestima.
-              </p>
-              <div
-                id="carlos-content"
-                class="overflow-hidden transition-all max-h-0 duration-700 ease-in-out"
-              >
-                <p class="mt-3 text-gray-700">
-                  Su enfoque combina técnicas cognitivas y mindfulness, con un
-                  estilo empático y centrado en soluciones prácticas para cada
-                  persona.
-                </p>
-              </div>
-              <button
-                onclick="toggleContent('carlos-content', this)"
-                class="mt-4 text-blue-600 font-medium hover:underline"
-              >
-                Leer más
-              </button>
-            </div>
-          </div>
-
-          <!-- Tarjeta 3: María -->
-          <div
-            class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4border-[#336699] pb-6"
-            data-aos="fade-up"
-            data-aos-delay="200"
-          >
-            <img
-              src="/images/terapista3.jpg"
-              alt="María López"
-              class="w-40 h-40 rounded-full object-cover shadow-md"
-            />
-            <div class="w-full">
-              <h3 class="text-2xl font-semibold">María López, MFT</h3>
-              <p class="text-indigo-600 font-medium">
-                Terapia de Pareja y Crianza
-              </p>
-              <p class="mt-3 text-gray-700">
-                María se ha especializado en dinámicas familiares, relaciones de
-                pareja y crianza consciente.
-              </p>
-              <div
-                id="maria-content"
-                class="overflow-hidden transition-all max-h-0 duration-700 ease-in-out"
-              >
-                <p class="mt-3 text-gray-700">
-                  Con enfoque sistémico y terapias narrativas, acompaña procesos
-                  donde se fortalecen los vínculos afectivos desde el respeto y
-                  la empatía.
-                </p>
-              </div>
-              <button
-                onclick="toggleContent('maria-content', this)"
-                class="mt-4 text-blue-600 font-medium hover:underline"
-              >
-                Leer más
-              </button>
-            </div>
-          </div>
-
-          
-        </div>
       </section>
     </main>
+    <!-- Pie de pagina... -->
+    <footer
+      class="bg-[#336699] text-white text-center py-4 border-t border-[#F8F4E3]/80"
+    >
+      <p class="text-sm md:text-base font-medium">EaBuenCamino - 2025</p>
+    </footer>
     <!-- JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
