ajuste de nombfres de terapistas

--- a/team.html
+++ b/team.html
@@ -416,12 +416,12 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/lady2.jpg"
-              alt="Therapist"
+              src="/images/jpg/susana.jpg"
+              alt="Susana Castro"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
             <div class="w-full">
-              <h3 class="text-2xl font-semibold">Therapist, LPCC</h3>
+              <h3 class="text-2xl font-semibold">Susana Castro</h3>
               <p class="text-indigo-600 font-medium">
                 Consejera Clínica Bilingüe
               </p>
@@ -454,19 +454,19 @@
             </div>
           </div>
 
-          <!-- Tarjeta 4: Admin 1 -->
+          <!-- Tarjeta 4: Berenice Terrazas -->
           <div
             class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
             data-aos="fade-up"
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/admin1.jpg"
-              alt="admin"
+              src="/images/jpg/berenice.jpg"
+              alt="Berenice Terrazas"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
             <div class="w-full">
-              <h3 class="text-2xl font-semibold">Admin 1, LPCC</h3>
+              <h3 class="text-2xl font-semibold">Berenice Terrazas</h3>
               <p class="text-indigo-600 font-medium">
                 Consejera Clínica Bilingüe
               </p>
