--- a/admin.html
+++ b/admin.html
@@ -38,14 +38,14 @@
         class="w-40 h-50 md:w-60 md:h-70 mx-auto mb-6 mt-6 bg-gray-300 shadow-md overflow-hidden flex items-center justify-center"
       >
         <img
-          src="/images/jpg/admin1.jpg"
-          alt="Diana Hernández"
+          src="/images/jpg/berenice.jpg"
+          alt="Berenice Terrazas"
           class="w-full h-full object-cover"
         />
       </div>
 
       <!-- Nombre -->
-      <h1 class="text-3xl font-bold text-center mb-2">Admin 1</h1>
+      <h1 class="text-3xl font-bold text-center mb-2">Berenice Terrazas</h1>
 
       <!-- Título -->
       <h2 class="text-lg italic font-medium text-center mb-6">
