--- a/terapista.html
+++ b/terapista.html
@@ -38,14 +38,14 @@
         class="w-40 h-50 md:w-60 md:h-70 mx-auto mb-6 mt-6  bg-gray-300 shadow-md overflow-hidden flex items-center justify-center"
       >
         <img
-          src="/images/jpg/lady2.jpg"
-          alt="Diana Hernández"
+          src="/images/jpg/susana.jpg"
+          alt="Susana castro"
           class="w-full h-full object-cover"
         />
       </div>
 
       <!-- Nombre -->
-      <h1 class="text-3xl font-bold text-center mb-2">Therapist 1</h1>
+      <h1 class="text-3xl font-bold text-center mb-2">Susana Castro</h1>
 
       <!-- Título -->
       <h2 class="text-lg italic font-medium text-center mb-6">
@@ -55,7 +55,7 @@
       <!-- Descripción -->
       <div class="text-gray-700 space-y-4 text-justify">
         <p>
-          Mi nombre es Diana Hernández y soy una Consejera Clínica Profesional
+          Mi nombre es Susana castro y soy una Consejera Clínica Profesional
           Licenciada, bilingüe en español e inglés. Crecí en los Estados Unidos
           y soy hija de inmigrantes mexicanos. Esta combinación de culturas me
           ha brindado una profunda sensibilidad hacia diferentes perspectivas y
