ajjuste de rutas relativas a fotos del equipo en paguna team.html

--- a/team.html
+++ b/team.html
@@ -326,7 +326,7 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/diana-hernandez.jpg"
+              src="./images/jpg/diana-hernandez.jpg"
               alt="Diana Hernández"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
@@ -371,7 +371,7 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/jorge-b.jpg"
+              src="./images/jpg/jorge-b.jpg"
               alt="Jorge B"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md "
             />
@@ -416,7 +416,7 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/susana.jpg"
+              src="./images/jpg/susana.jpg"
               alt="Susana Castro"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
@@ -461,7 +461,7 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/berenice.jpg"
+              src="./images/jpg/berenice.jpg"
               alt="Berenice Terrazas"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
@@ -506,7 +506,7 @@
             data-aos-delay="0"
           >
             <img
-              src="/images/jpg/fidel-ramirez.jpg"
+              src="./images/jpg/fidel-ramirez.jpg"
               alt="fidel"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md"
             />
