actualizacion rutas relativas imagenes de terapistas

--- a/susana.html
+++ b/susana.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-[#F8F4E3] text-[#336699]">
-    <!-- Botón regresar -->
+   <!-- Botón regresar -->
     <div class="fixed top-0 w-full flex justify-end pt-0 md:hidden">
       <a
         href="team.html"
@@ -35,17 +35,17 @@
     <main class="max-w-4xl mx-auto px-4 py-6">
       <!-- Foto -->
       <div
-        class="w-40 h-50 md:w-60 md:h-70 mx-auto mb-6 mt-6 bg-gray-300 shadow-md overflow-hidden flex items-center justify-center"
+        class="w-40 h-50 md:w-60 md:h-70 mx-auto mb-6 mt-6  bg-gray-300 shadow-md overflow-hidden flex items-center justify-center"
       >
         <img
-          src="/images/jpg/berenice.jpg"
-          alt="Berenice Terrazas"
+          src="./images/jpg/susana.jpg"
+          alt="Susana castro"
           class="w-full h-full object-cover"
         />
       </div>
 
       <!-- Nombre -->
-      <h1 class="text-3xl font-bold text-center mb-2">Berenice Terrazas</h1>
+      <h1 class="text-3xl font-bold text-center mb-2">Susana Castro</h1>
 
       <!-- Título -->
       <h2 class="text-lg italic font-medium text-center mb-6">
@@ -55,7 +55,7 @@
       <!-- Descripción -->
       <div class="text-gray-700 space-y-4 text-justify">
         <p>
-          Mi nombre es Diana Hernández y soy una Consejera Clínica Profesional
+          Mi nombre es Susana castro y soy una Consejera Clínica Profesional
           Licenciada, bilingüe en español e inglés. Crecí en los Estados Unidos
           y soy hija de inmigrantes mexicanos. Esta combinación de culturas me
           ha brindado una profunda sensibilidad hacia diferentes perspectivas y
