--- a/jorge.html
+++ b/jorge.html
@@ -38,7 +38,7 @@
         class="w-40 h-50 md:w-60 md:h-70 mx-auto mb-6 mt-6  bg-gray-300 shadow-md overflow-hidden flex items-center justify-center"
       >
         <img
-          src="/images/jpg/jorge-b.jpg"
+          src="./images/jpg/jorge-b.jpg"
           alt="Jorge Brozicevich"
           class="w-full h-full object-cover"
         />
