ajuste de la version de detalles de ;a bio Diana

--- a/diana.html
+++ b/diana.html
@@ -51,9 +51,67 @@
       <h2 class="text-lg italic font-medium text-center mb-6">
         Consejera Clínica Profesional Licenciada
       </h2>
-
+      <!-- Nuevo grid descriptivo -->
+      <div
+        class="mt-8 bg-transparent grid grid-rows-5 md:grid-rows-1 md:grid-cols-5 gap-4"
+      >
+        <!-- Row 1 -->
+        <div
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+        >
+          <img
+            src="images/svg/bio-multilingual.svg"
+            alt="Multilingüe"
+            class="w-1/3 h-20"
+          />
+          <p class="text-sm text-[#336699] w-2/3">
+            Soy Bilingüe (esp - ing) con identidad bicultural, sensibilidad
+            cultural y respeto a los valores culturales.
+          </p>
+        </div>
+        <!-- Row 2 -->
+        <div
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+        >
+          <img
+            src="images/svg/bio-help.svg"
+            alt="Apoyo a comunidades"
+            class="w-1/3 h-20"
+          />
+          <p class="text-sm text-[#336699] w-2/3">Con experiencia extensa en salud mental, servicio a comunidades vulnerables, enfoque inclusivo.</p>
+        </div>
+        <!-- Row 3 -->
+        <div
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+        >
+          <img
+            src="images/svg/bio-tools.svg"
+            alt="Herramientas terapéuticas"
+            class="w-1/3 h-20"
+          />
+          <p class="text-sm text-[#336699] w-2/3">Y especialización en temas complejos: trauma, adolescencia, familia; formación diversa en terapias modernas.</p>
+        </div>
+        <!-- Row 4 -->
+        <div
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+        >
+          <img src="images/svg/bio-heart.svg" alt="Empatía" class="w-1/3 h-20" />
+          <p class="text-sm text-[#336699] w-2/3"> Mi Enfoque terapéutico compasivo y auténtico, confianza en la sabiduría interna, proceso desafiante pero transformador.</p>
+        </div>
+        <!-- Row 5 -->
+        <div
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+        >
+          <img
+            src="images/svg/bio-sun.svg"
+            alt="Transformación"
+            class="w-1/3 h-20"
+          />
+          <p class="text-sm text-[#336699] w-2/3">Mi terapia como acompañamiento hacia la sanación, familia y pareja como aliados, no obstáculos.</p>
+        </div>
+      </div>
       <!-- Descripción -->
-      <div class="text-gray-700 space-y-4 text-justify">
+      <!-- <div class="text-gray-700 space-y-4 text-justify">
         <p>
           Mi nombre es Diana Hernández y soy una Consejera Clínica Profesional
           Licenciada, bilingüe en español e inglés. Crecí en los Estados Unidos
@@ -94,9 +152,9 @@
           familia y a tu pareja no como obstáculos, sino como aliados
           fundamentales en tu camino hacia la sanación.
         </p>
-      </div>
+      </div> -->
       <!-- Botones (solo visibles en pantallas medianas en adelante) -->
-      <div class="flex  justify-center gap-4 mt-10">
+      <div class="flex justify-center gap-4 mt-10">
         <a
           href="contact.html"
           class="bg-[#336699] text-white px-6 py-2 rounded-full text-sm md:text-base hover:bg-[#2b5c88] transition"
