--- a/team.html
+++ b/team.html
@@ -320,7 +320,7 @@
 
         <div class="space-y-16">
           <!-- Tarjeta 1: Diana -->
-          <div
+          <div id="jorgeb"
             class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
             data-aos="fade-up"
             data-aos-delay="0"
@@ -365,8 +365,8 @@
           </div>
 
           <!-- Tarjeta 2: Jorge B -->
-          <div
-            class="flex flex-col md:flex-row-reverse items-center md:justify-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 "
+          <div  id="jorgeb"
+            class="flex flex-col md:flex-row-reverse items-center md:justify-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-30"
             data-aos="fade-up"
             data-aos-delay="0"
           >
@@ -374,6 +374,7 @@
               src="./images/jpg/jorge-b.jpg"
               alt="Jorge B"
               class="w-40 h-50 rounded-3xl md:rounded-full object-cover shadow-md "
+              
             />
             <div class="w-full ">
               <h3 class="text-2xl font-semibold">Jorge Brozicevich, LPCC</h3>
@@ -403,6 +404,7 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     d="M14 5l7 7m0 0l-7 7m7-7H3"
+                   
                   />
                 </svg>
               </a>
@@ -410,8 +412,8 @@
           </div>
 
           <!-- Tarjeta 3: Teraspista 2 -->
-          <div
-            class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6"
+          <div  id="susana"
+            class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-12 border-b-4 border-[#336699] pb-6 scroll-mt-56 "
             data-aos="fade-up"
             data-aos-delay="0"
           >
@@ -432,7 +434,7 @@
               </p>
 
               <a
-                href="terapista.html"
+                href="susana.html"
                 class="inline-flex items-center gap-1 text-[#336699] border border-[#336699] px-4 py-3 mt-3  rounded-full hover:bg-[#336699] hover:text-white transition"
               >
                 Leer más
