--- a/susana.html
+++ b/susana.html
@@ -104,7 +104,7 @@
           Contactar
         </a>
         <a
-          href="team.html"
+          href="team.html#susana"
           class="border border-[#336699] text-[#336699] px-6 py-2 rounded-full text-sm md:text-base hover:bg-[#f0f4f8] transition"
         >
           Regresar al menú
