--- a/diana.html
+++ b/diana.html
@@ -62,7 +62,7 @@
           <img
             src="images/svg/bio-multilingual.svg"
             alt="Multilingüe"
-            class="w-1/3 h-20"
+            class="w-1/3 h-14"
           />
           <p class="text-sm text-[#336699] w-2/3">
             Soy Bilingüe (esp - ing) con identidad bicultural, sensibilidad
@@ -76,9 +76,12 @@
           <img
             src="images/svg/bio-help.svg"
             alt="Apoyo a comunidades"
-            class="w-1/3 h-20"
+            class="w-1/3 h-14"
           />
-          <p class="text-sm text-[#336699] w-2/3">Con experiencia extensa en salud mental, servicio a comunidades vulnerables, enfoque inclusivo.</p>
+          <p class="text-sm text-[#336699] w-2/3">
+            Con experiencia extensa en salud mental, servicio a comunidades
+            vulnerables, enfoque inclusivo.
+          </p>
         </div>
         <!-- Row 3 -->
         <div
@@ -87,16 +90,26 @@
           <img
             src="images/svg/bio-tools.svg"
             alt="Herramientas terapéuticas"
-            class="w-1/3 h-20"
+            class="w-1/3 h-12"
           />
-          <p class="text-sm text-[#336699] w-2/3">Y especialización en temas complejos: trauma, adolescencia, familia; formación diversa en terapias modernas.</p>
+          <p class="text-sm text-[#336699] w-2/3">
+            Y especialización en temas complejos: trauma, adolescencia, familia;
+            formación diversa en terapias modernas.
+          </p>
         </div>
         <!-- Row 4 -->
         <div
           class="flex flex-row items-center justify-center text-center gap-2 bg-white"
         >
-          <img src="images/svg/bio-heart.svg" alt="Empatía" class="w-1/3 h-20" />
-          <p class="text-sm text-[#336699] w-2/3"> Mi Enfoque terapéutico compasivo y auténtico, confianza en la sabiduría interna, proceso desafiante pero transformador.</p>
+          <img
+            src="images/svg/bio-heart.svg"
+            alt="Empatía"
+            class="w-1/3 h-14"
+          />
+          <p class="text-sm text-[#336699] w-2/3">
+            Mi Enfoque terapéutico compasivo y auténtico, confianza en la
+            sabiduría interna, proceso desafiante pero transformador.
+          </p>
         </div>
         <!-- Row 5 -->
         <div
@@ -105,9 +118,12 @@
           <img
             src="images/svg/bio-sun.svg"
             alt="Transformación"
-            class="w-1/3 h-20"
+            class="w-1/3 h-14"
           />
-          <p class="text-sm text-[#336699] w-2/3">Mi terapia como acompañamiento hacia la sanación, familia y pareja como aliados, no obstáculos.</p>
+          <p class="text-sm text-[#336699] w-2/3">
+            Mi terapia como acompañamiento hacia la sanación, familia y pareja
+            como aliados, no obstáculos.
+          </p>
         </div>
       </div>
       <!-- Descripción -->
