activacion de scroll detalles bio diana

--- a/diana.html
+++ b/diana.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfil del Equipo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Custom CSS (opcional) -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-[#F8F4E3] text-[#336699]">
     <!-- Botón regresar -->
@@ -57,7 +59,7 @@
       >
         <!-- Row 1 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
         >
           <img
             src="images/svg/bio-multilingual.svg"
@@ -71,7 +73,7 @@
         </div>
         <!-- Row 2 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
         >
           <img
             src="images/svg/bio-help.svg"
@@ -85,7 +87,7 @@
         </div>
         <!-- Row 3 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
         >
           <img
             src="images/svg/bio-tools.svg"
@@ -99,7 +101,7 @@
         </div>
         <!-- Row 4 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
         >
           <img
             src="images/svg/bio-heart.svg"
@@ -113,7 +115,7 @@
         </div>
         <!-- Row 5 -->
         <div
-          class="flex flex-row items-center justify-center text-center gap-2 bg-white"
+          class="flex flex-row items-center justify-center text-center gap-2 bg-white fade-on-scroll"
         >
           <img
             src="images/svg/bio-sun.svg"
@@ -121,8 +123,9 @@
             class="w-1/3 h-14"
           />
           <p class="text-sm text-[#336699] w-2/3">
-            Mi terapia como acompañamiento hacia la sanación, familia y pareja
-            como aliados, no obstáculos.
+            Mi objetivo es acompañarte para que puedas verte a ti mismo/a, a tu
+            familia y a tu pareja no como obstáculos, sino como aliados
+            fundamentales en tu camino hacia la sanación.
           </p>
         </div>
       </div>
@@ -185,5 +188,7 @@
         </a>
       </div>
     </main>
+    <!-- JS -->
+    <script src="js/main.js"></script>
   </body>
 </html>
